--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <script src="./todo.js"></script>
     <script src="./app.js"></script>
 </head>
 <body>
     <main>
         <h1>TODO APP</h1>
-        <div class="contenedor-tarea-nueva">
-            <input type="text" id="nuevaTarea" placeholder="Ingrese la tarea...">
-            <button class="boton boton-agregar" onclick="agregarTarea()">Agregar</button>
+        <div class="input-container">
+            <input type="text" id="newTodo" placeholder="Insert a new to-do...">
+            <button class="btn btn-add" onclick="addTodoItem()">Add</button>
         </div>
-        <ul class="lista-tareas" id="listaTareas">
+        <ul class="todo-list" id="todoList">
         </ul>
     </main>
     
